--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,12 +3,26 @@
 <h1>Products</h1>
 
 <div id="products">
+<table class="table table-border" width ="100%">
+  <thead>
+    <tr>
+      <th>Código Prod</th>
+      <th>Descr. Prod</th>
+      <th>Unid.Vta</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
   <% @products.each do |product| %>
-    <%= render product %>
-    <p>
-      <%= link_to "Show this product", product %>
-    </p>
-  <% end %>
+    <tr id="<%= dom_id product %>">
+      <td> <%= product.code %></td>
+      <td> <%= product.description %></td>
+      <td> <%= product.salesUnit %></td>
+      <td> <%= link_to "Edit this product", edit_product_path(product) %> </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 </div>
 
 <%= link_to "New product", new_product_path %>
