editing kaminari views, editing index from products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Products</h1>
+<h1 class="text-center">Products</h1>
 
 <div id="products">
 <table class="table table-border" width ="100%">
